Grid works on normal and expelled list. Minor issues with alignment

--- a/styles.css
+++ b/styles.css
@@ -37,6 +37,50 @@ img {
   font-size: 2rem;
 }
 
+/* "TABLE" GRID STYLING ----------------------*/
+#sorting {
+  display: grid;
+  grid-template-columns: repeat(11, 1fr);
+}
+
+#sorting > p {
+  display: flex;
+}
+
+tbody {
+  display: grid;
+  grid-template-columns: repeat(11, 1fr);
+  grid-template-rows: auto;
+}
+
+.student_template {
+  display: grid;
+  grid-template-columns: repeat(11, 1fr);
+  grid-column: span 11;
+}
+.student_template > p {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.gender {
+  grid-row: 1;
+  grid-column: 2 /3;
+}
+.iqsquad {
+  grid-row: 1;
+  grid-column: 3 / 4;
+}
+.prefect {
+  grid-row: 1;
+  grid-column: 4 / 5;
+}
+
+.bloodtype {
+  grid-column: 5 / 6;
+}
+
 /* DROPDOWN STYLING --------------------------*/
 
 .filter_dropdown {
@@ -259,43 +303,6 @@ section > article > .student_house {
   grid-row: 1;
   align-self: start;
 }
-.student_name {
-  grid-row: 4;
-  grid-column: 2;
-}
-.student_nickname {
-  grid-row: 5;
-  grid-column: 2;
-}
-.student_middlename {
-  grid-row: 6;
-  grid-column: 2;
-}
-.student_lastname {
-  grid-row: 7;
-  grid-column: 2;
-}
-
-.firstname_text {
-  grid-row: 4;
-  grid-column: 1;
-}
-.nickname_text {
-  grid-row: 5;
-  grid-column: 1;
-}
-.middlename_text {
-  grid-row: 6;
-  grid-column: 1;
-}
-.lastname_text {
-  grid-row: 7;
-  grid-column: 1;
-}
-
-.iqsquad {
-  grid-column: 3;
-}
 
 p[data-field="prefect"]::after {
   content: " 🥇 ";
@@ -305,20 +312,5 @@ p[data-field="prefect"][data-prefect="false"] {
   filter: grayscale(1);
 }
 
-.prefect {
-  grid-column: 3;
-}
-
-.iqsquad {
-  grid-column: 4;
-}
-
-.expelled {
-  grid-column: 3 span;
-  grid-row: 5;
-}
-
-.student_blood {
-  grid-row: 5;
-  grid-column: 3;
+@media screen and (max-width: 600px) {
 }
